--- a/index.html
+++ b/index.html
@@ -4,21 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mani Vasagam - Digital Marketing & Automation Expert</title>
-    <meta name="description" content="Premium digital marketing services, automation solutions, and content creation by Mani Vasagam. Specializing in Facebook Ads, Google Ads, and business automation." />
+    <meta
+      name="description"
+      content="Premium digital marketing services, automation solutions, and content creation by Mani Vasagam. Specializing in Facebook Ads, Google Ads, and business automation."
+    />
     <meta name="author" content="Mani Vasagam" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
+    <!-- Open Graph / WhatsApp / Facebook -->
     <meta property="og:title" content="Mani Vasagam - Digital Marketing & Automation Expert" />
     <meta property="og:description" content="Premium digital marketing services, automation solutions, and content creation." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://manivasagamtech.icu/" />
+    <meta property="og:image" content="https://manivasagamtech.icu/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Mani Vasagam - Digital Marketing & Automation Expert" />
+    <meta name="twitter:description" content="Premium digital marketing services, automation solutions, and content creation." />
+    <meta name="twitter:image" content="https://manivasagamtech.icu/og-image.jpg" />
   </head>
 
   <body>
